--- a/index.html
+++ b/index.html
@@ -37,13 +37,17 @@
     </div>
   
     <h2 class="label">Romania</h2>
-    <div class="flag" style="">
-      <!-- insert flag here -->
+    <div class="flag" style="display: flex;">
+      <div class="romania-blue" width="threehoriz"></div>
+      <div class="romania-yellow" width="threehoriz"></div>
+      <div class="romania-red" width="threehoriz"></div>
     </div>
   
     <h2 class="label">Mexico</h2>
-    <div class="flag">
-      <!-- insert flag here -->
+    <div class="flag" style="display: flex;">
+      <div class="mexico-green" width="threehoriz"></div>
+      <img class="mexico-img" src="eagle.png" alt="Eagle" style="display: flex;">
+      <div class="mexico-red" width="threehoriz"></div>
     </div>
 
     <h2>Margin</h2>
